--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
     "next": "13.4.6",
-    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "prettier": "2.8.8"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "prettier": "2.8.8",
+    "tailwindcss": "^3.3.2"
   }
 }
