--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "firebase": "^10.1.0",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "styled-components": "5.2",
     "swiper": "^10.1.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
