--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react-icons": "^4.10.1",
     "styled-components": "5.2",
     "swiper": "^10.1.0",
-    "typescript": "5.1.3",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.62.0",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.47.0",
     "postcss": "^8.4.24",
-    "prettier": "2.8.8",
-    "tailwindcss": "^3.3.2"
+    "prettier": "3.0.2",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.5"
   }
 }
