--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "firebase": "^10.1.0",
+    "encoding": "^0.1.13",
+    "firebase": "^10.5.0",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,13 +23,13 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/parser": "^5.0.1",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.47.0",
+    "eslint": "^8.7.0",
     "postcss": "^8.4.24",
-    "prettier": "3.0.2",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.4.4"
   }
 }
